syntax = "proto3";

option csharp_namespace = "RemoteShooterVendingMachine";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
}

// The request message containing the user's name.
message HelloRequest {
  string location = 1;
}

// The response message containing the greetings.
message HelloReply {
  string shootersAvailable = 1;
  string shootersSold = 2;
  string favoriteShooter = 3;
}
